Swagger completo e get com query funcionando
