# backend/swagger.yml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   description: 'Essa documentação tem como objetivo apresentar os contratos do microserviço da entidade "Disciplinas" como parte da avaliação da disciplina de Construção de Software.'
-  version: "1.0.0"
+  version: "2.0.0"
   title: "Swagger Disciplinas - Microserviços PUCRS"
   termsOfService: "http://swagger.io/terms/"
   contact:
@@ -10,11 +10,11 @@ info:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 
-host: "localhost:3000/api"
+host: "localhost:3333/api"
 basePath: "/"
 tags:
   - name: "disciplina"
-    description: "Qualquer coisa sobre as disciplinas"
+    description: "Todos os métodos sobre as disciplinas"
 schemes:
   - "http"
 paths:
@@ -22,9 +22,9 @@ paths:
     get:
       tags:
         - "disciplina"
-      summary: "Busca todas"
-      description: "Busca todas as disciplinas cadastradas"
-      operationId: "getAllDisciplines"
+      summary: "Lista todas ou de acordo com parâmetro passado"
+      description: "Lista todas ou de acordo com parâmetro passado"
+      operationId: "getAll"
       consumes:
         - "application/json"
       produces:
@@ -32,13 +32,38 @@ paths:
       responses:
         "200":
           description: "OK"
+          schema:
+            $ref: "#/definitions/Disciplinas"
+    post:
+      tags:
+        - "disciplina"
+      summary: "Cadastra disciplina"
+      description: "Cadastra disciplina seguindo a requisição do modelo"
+      operationId: "post"
+      parameters:
+        - in: "body"
+          name: "body"
+          required: true
+          schema:
+            $ref: "#/definitions/Disciplina"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "201":
+          description: "Objeto criado"
+          schema:
+            $ref: "#/definitions/Disciplina"
+        "302":
+          description: "Objeto já existente"
   /disciplinas/{disciplinaid}:
     get:
       tags:
         - "disciplina"
       summary: "Busca disciplina pelo id"
       description: "Busca disciplina pelo id"
-      operationId: "getDiscipline"
+      operationId: "get"
       consumes:
         - "application/json"
       produces:
@@ -46,10 +71,126 @@ paths:
       parameters:
         - name: "disciplinaid"
           in: "path"
-          description: "Id da disciplina para retornar"
+          description: "Id da disciplina que deseja buscar"
           required: true
-          type: "integer"
-          format: "int64"
+          type: string
+          format: uuid
       responses:
         "200":
-          description: "OK"
+          schema:
+            $ref: "#/definitions/Disciplina"
+    put:
+      tags:
+        - "disciplina"
+      summary: "Atualiza a disciplina com esse id"
+      description: "Atualiza a disciplina com esse id"
+      operationId: "put"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        type: string
+        format: uuid
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/Disciplina"
+      responses:
+        "200":
+          description: "Ok"
+        "404":
+          description: "Objeto não encontrado"
+    patch:
+      tags:
+      - "disciplina"
+      summary: "Atualiza parcialmente uma disciplina"
+      operationId: "patch"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        type: string
+        format: uuid
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/Content"
+      responses:
+        "200":
+          description: "Ok"
+        "404":
+          description: "Objeto não encontrado"
+    delete:
+      tags:
+        - "disciplina"
+      summary: "Deleta uma disciplina pelo seu id"
+      description: "Deleta uma disciplina pelo seu id"
+      operationId: "delete"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        type: string
+         format: uuid
+      responses:
+        "200":
+          description: "Objeto excluido com sucesso"
+        "404":
+          description: "Objeto não encontrado"
+definitions:
+  Disciplinas:
+    type: array
+    items:
+      $ref: "#/definitions/Disciplina"
+  Disciplina:
+    type: "object"
+    required:
+      - "nome"
+      - "objetivos"
+      - "ementa"
+      - "bibliografia"
+      - "codigo"
+      - "creditos"
+    properties:
+      nome:
+        type: "string"
+        example: "Construção de Software"
+      objetivos:
+        type: "string"
+        example: "A construção de software é uma das áreas da engenharia de software."
+      ementa:
+        type: "string"
+        example: "Visão geral sobre os fundamentos de construção de software. Estudo de conceitos relacionados à reutilização de software.  Entendimento e exploração dos conceitos de frameworks, componentes e linhas de produtos de software. Conhecimento das arquiteturas dirigidas por modelos. Desenvolvimento e uso de ferramentas de reutilização de software."
+      bibliografia:
+        type: "array"
+        items:
+          type: "string"
+          example:
+            [
+              "Site sobre construção de software", "Livro sobre construção de software" ]
+      codigo:
+        type: "integer"
+        items:
+          type: "integer"
+          minLength: 5
+          maxLength: 5
+          example: 46504
+      creditos:
+        type: "integer"
+        items:
+          type: "integer"
+          minLength: 1
+          maxLength: 1
+          example: 4
